--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hmm-api",
-  "version": "1.0.3",
+  "version": "1.0.31",
   "description": "Fetch api wrapper",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -21,6 +21,10 @@
     "react",
     "next-js"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/babyo77/hmm-api"
+  },
   "author": "tanmay",
   "license": "ISC",
   "devDependencies": {
