--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hmm-api",
-  "version": "1.0.44",
-  "description": "Fetch api wrapper",
+  "version": "1.0.5",
+  "description": "Write less, debug less, and focus on what matters!",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
