--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "hmm-api",
-  "version": "1.0.77",
+  "version": "1.0.78",
   "description": "Write less, debug less, and focus on what matters!",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "npx tsc && nodemon __tests__/index.ts",
     "build": "npx tsc",
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts"
   },
   "files": [
     "dist",
     "readme.md"
   ],
-  "bin": "dist/src/index.js",
+  "bin": {
+    "hmm-api": "dist/index.js"
+  },
   "keywords": [
     "fetch",
     "http",
@@ -23,7 +25,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/babyo77/hmm-api"
+    "url": "git+https://github.com/babyo77/hmm-api.git"
   },
   "author": "tanmay",
   "license": "ISC",
