--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hmm-api",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "description": "Write less, debug less, and focus on what matters!",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,8 @@
     "test": "npx tsc && nodemon __tests__/index.ts",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "publish": "npx tsc && npm publish"
   },
   "files": [
     "dist",
